fix: tree overflow fix

--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,7 @@ body {
 }
 
 .tree {
+    margin-top: 100px;
     display: flex;
     flex-direction: column;
     align-items: center;
